[search] Implement the search bar to search by name

--- a/list.html
+++ b/list.html
@@ -30,6 +30,10 @@
         <div class="d-grid gap-2">
           <button class="btn btn-primary" type="button">Add item</button>
           <button class="btn btn-light" type="button">Clear all</button>
+          <div class="input-group mb-3">
+            <input id="input-search" type="text" class="form-control" placeholder="character search by name" aria-label="character search by name" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="button" id="button-search">search</button>
+          </div>
         </div>
       </div>
     </div>
